--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,19 @@
 }
 
 html{
-    font-size: 62,5%;
+    font-size: 62.5%;
+}
+
+ul{
+    list-style-type: none;
+}
+
+a{
+    text-decoration: none;
 }
 
 body{
+    box-sizing: inherit;
     font-size: 1.6rem;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
@@ -23,4 +32,79 @@ body{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    padding: 0 10%;
 }
+.header__navbar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 2rem;
+}
+.header__logo{
+    width: 10rem;
+}
+.logo{
+    width: 100%;
+}
+
+.header__nav{
+    flex: 1;
+    text-align: right;
+}
+
+.header__navList{
+    display: inline-block;
+    margin: 1rem 2.5rem;
+}
+.header__navLink{
+    color: #fff;
+}
+.header__navLink:hover{
+    color: #ff5361;
+}
+.header__uploadBtn{
+    background: #ff5361;
+    color: #fff;
+    border-radius: 3rem;
+    padding: 1rem 4rem;
+    margin-left: 2.5rem;
+    transition: transform 0.5s;
+}
+.header__uploadBtn:hover{
+    transform: scale(0.9);
+}
+
+.header__text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    color: #fff;
+}
+.header__title{
+    font-size: 5.2rem;
+    font-weight: 400;
+}
+.searchInput{
+    width: 90%;
+    max-width: 840px;
+    height: 55px;
+    border-radius: 3rem;
+    outline: none;
+    border: none;
+    padding: 0 30px;
+    margin: 2rem 0;
+    font-size: 1.8rem;
+}
+::placeholder{
+    font-weight: 500;
+}
+.searchLink{
+    color: #fff;
+    font-size: 1.8rem;
+}
+.galary{
+    
+}
+
