--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,8 @@ body{
 }
 
 .mainSection{
-    margin-left: 10%;
-    margin-right: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
     margin: 40px 0;
 }
 .galary__title{
@@ -121,7 +121,7 @@ body{
 .galary__masonary{
     display: flex;
     flex-flow: column wrap;
-    max-height: 2400px;
+    max-height: 1800px;
     margin: auto;
     width: 100%;
 }
@@ -147,4 +147,50 @@ body{
     padding: 14px 0;
     border-radius: 30px;
     margin: 60px auto;
+    transition: transform 0.5s;
+}
+
+.galary__btn:hover{
+    transform: scale(0.9);
+}
+
+.customers{
+    padding-left: 10%;
+    padding-right: 10%;
+    margin: 70px 0;
+}
+
+.customers__title{
+    color: #535353;
+    font-weight: 500;
+    font-size: 3rem;
+    margin: 6rem 0;
+    text-align: center;
+}
+
+.customers__row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+.customers__col{
+    flex-basis: 25%;
+    text-align: center;
+}
+.customers__col img{
+    width: 90%;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.customers__col img:hover{
+    transform: translateY(-10px);
+}
+
+.about__title{
+    color: #535353;
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
+    margin: 6rem 0;
 }
