--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,17 @@ body{
     text-align: center;
     margin: 6rem 0;
 }
+.about p{
+    color: #535353;
+    font-size: 1.7rem;
+    margin: 60px 0;
+}
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 8rem;
+    background: #ebebeb;
+    color: #535353;
+    font-size: 1.7rem;
+}
